[tool.poetry]
name = "b"
version = "0.1.0"
description = "A distributed bug tracker extension for Mercurial"
authors = ["Jared Julien <jared.julien@nexteer.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mercurial = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
