[tool.poetry]
name = "b"
version = "1.1.3"
description = "A distributed bug tracker extension for Mercurial now with the ability to standalone"
authors = ["Jared Julien <jared.julien@nexteer.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mercurial = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
b = 'b.command:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
