[tool.poetry]
name = "b"
version = "2.1.0"
description = "A simple, distributed bug tracker."
authors = [
    "Michael Diamond <michael@digitalgemstones.com>",
    "Jared Julien <jaredjulien@exsystems.net>"
]

[tool.poetry.dependencies]
python = "^3.10"
mercurial = "^6.0"
rich = "^13.3.5"
rich-argparse = "^1.1.0"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
b = 'b.command:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
